# mdatp-xplat

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml  version-check.yml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  VERSIONING.md
linux/: MDATP_Linux_High_CPU_parser.ps1  README.md
linux/LinuxMDEparser/: LinuxMDEparser.py  Linuxfilenamelog.py  README.MD  README.ME  json2excel.py  main.py  real_time_protection.py  real_time_protection_json.py  wdavcfg.py  wdavhistory.py
linux/LiveResponse/: README.md
linux/LiveResponse/ClientAnalyzer/: InstallXMDEClientAnalyzer.sh  InstallXMDEPythonClientAnalyzer.sh  MDEPythonSupportTool.sh  MDESupportTool.sh  README.md
linux/MDEAuditdAnalyzer/: MDEAuditAnalyzer.py  README.md
linux/MDEAuditdAnalyzer/binaries/: README.md
linux/configs/: mdatp_managed.json
linux/definition_downloader/: README.md  settings.json  settings.ps1  xplat_offline_updates_download.ps1  xplat_offline_updates_download.sh
linux/diagnostic/: README.md  high_cpu_parser.py
linux/installation/: README.md  mde_installer.sh
linux/installation/third_party_installation_playbooks/: ansible.install_mdatp_manual.yaml  ansible.install_mdatp_simplified.yaml  ansible.install_mde.playbook.yaml  ansible.uninstall_mdatp_manual.yaml  ansible.uninstall_mdatp_simplified.yaml  chef.install_mdatp_manual.rb  chef.install_mdatp_simplified.rb  puppet.init.pp  puppet.install_mdatp_manual.init.pp  puppet.install_mdatp_simplified.init.pp  salt.install_mdatp_manual.sls  salt.install_mdatp_mde_installer.sls  salt.install_mdatp_simplified.sls
linux/quarantine_release/: release_from_quarantine.yml
linux/scheduler/: README.md  schedule_scan.py  schedule_update.py
macos/: README.md
macos/fix/: upgrade_from_25062_helper.pkg
macos/jamf/: README.md  download_profile.py
macos/jamf/ea/: Defender for Endpoint - App Version  Defender for Endpoint - Definitions Date  Defender for Endpoint - Engine Version  Defender for Endpoint - Healthy  Defender for Endpoint - Product Expiration  README.md  readme.md
macos/mdm/: README.md  analyze_profiles.py
macos/mobileconfig/: README.md
macos/mobileconfig/combined/: build.sh  build_combined.py  mdatp-nokext.mobileconfig  mdatp.mobileconfig  template.mobileconfig
macos/mobileconfig/profiles/: accessibility.mobileconfig  background_services.mobileconfig  bluetooth.mobileconfig  fulldisk.mobileconfig  kext.mobileconfig  netfilter.mobileconfig  network-protection-vpn.mobileconfig  notif.mobileconfig  sysext.mobileconfig  sysext_restricted.mobileconfig  vpn.mobileconfig
macos/schema/: README.md  schema.json
macos/schema/validator/: README.md  requirements.txt  validate-config-profile  validate-config-profile.py
macos/settings/: README.md
macos/settings/data_loss_prevention/: README.md  com.microsoft.wdav.mobileconfig  schema.json  (+1 more)
macos/upgrade_from_2506_helper/: README.md  upgrade_from_25062_helper.pkg
tests/bats/: mde_installer.bats  test_helper.bash  xplat_offline_updates.bats
tests/e2e/: .env.example  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  distro_parser.py  health_checker.py  results_formatter.py  runner.py
tests/integration/: README.md
tests/python/: conftest.py  test_code_quality.py  test_diagnostic.py  test_linuxmdeparser.py  test_macos.py  test_mdeauditanalyzer.py  test_scheduler.py  test_security_reliability.py
(+18 files in other folders)
